<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_sign_up_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/AppColor"
    tools:context="netroxtech.com.appraasr.activity.SignUp">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="5dp"
    >
    <LinearLayout
        android:id="@+id/SignUpLable_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"

        android:layout_marginTop="10dp">
        <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
            android:text="@string/signUp"
            android:textSize="40dp"
            android:textColor="@color/white"
            android:id="@+id/signupActivity_text_label"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:id="@+id/email_layout"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lastName_layout">
        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/signUp_activity_email"
                android:textColorHint="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:textColor="@color/white"
                android:hint="@string/email" />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:id="@+id/lastName_layout"
        android:layout_height="wrap_content"
        android:layout_below="@+id/firstName_layout"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
       >
        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_lastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/signUp_activity_lastName"
                android:textColorHint="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"

                android:textColor="@color/white"
                android:hint="@string/lastName" />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:id="@+id/password_layout"
        android:layout_height="wrap_content"
        android:layout_below="@+id/email_layout"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
    >
        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/signUp_activity_password"
                android:textColorHint="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"

                android:textColor="@color/white"
                android:hint="@string/password" />
        </android.support.design.widget.TextInputLayout>

    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:id="@+id/username_layout"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password_layout"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
       >
        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_uyserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/signUp_activity_userName"
                android:textColorHint="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"

                android:textColor="@color/white"
                android:hint="@string/userName" />
        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp">
        <Button
            android:id="@+id/signup__activity_signup_btn"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_below="@+id/username_layout"
            android:layout_height="wrap_content"
            android:background="@drawable/button_design"
            android:text="Sign Up"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="14dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/firstName_layout"
        android:layout_below="@+id/SignUpLable_layout"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">
        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_firstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/signUp_activity_firstName"
                android:textColorHint="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:textColor="@color/white"
                android:hint="@string/firstName" />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

</RelativeLayout>
</android.support.design.widget.CoordinatorLayout>
