<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_sign_in_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/AppColor"
    tools:context="netroxtech.com.appraasr.activity.SignUp">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:id="@+id/loginLable_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Login"
            android:textSize="40dp"
            android:textColor="@color/white"
            android:id="@+id/loginActivity_text_label"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:id="@+id/email_layout"
        android:layout_height="wrap_content"
        android:layout_below="@+id/loginLable_layout">
        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/login_activity_email"
                android:textColorHint="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:textColor="@color/white"
                android:hint="@string/email" />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>


    <LinearLayout
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:id="@+id/password_layout"
        android:layout_height="wrap_content"
        android:layout_below="@+id/email_layout"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        >
        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/login_activity_password"
                android:textColorHint="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"

                android:textColor="@color/white"
                android:hint="@string/password" />
        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"

        android:id="@+id/linearLayout">
        <Button
            android:id="@+id/login_activity_login_btn"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_below="@+id/username_layout"
            android:layout_height="wrap_content"
            android:background="@drawable/button_design"
            android:text="Login"
            />

    </LinearLayout>
</RelativeLayout>

</android.support.design.widget.CoordinatorLayout>
